# LitPlay

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  Dockerfile.analytics  Dockerfile.asr  Dockerfile.node  PRODUCTION_READINESS_NEXT_STEPS.md  README.md  SECURITY.md  docker-compose.yml  jest.shared.js  litplaydesigndoc.md  litplaydesigndocv1.md  litplaymasterdoc.md  package-lock.json  package.json  rebuild.sh  tsconfig.base.json
.github/workflows/: ci.yml
infra/api-gateway/: nginx.conf
infra/terraform/: main.tf  staging.tfvars.example
mobile/: .env.example  App.tsx  app.json  index.js  package-lock.json  package.json  tsconfig.json
mobile/src/hooks/: use-asr.ts
mobile/src/i18n/: index.ts
mobile/src/offline/: sqlite-store.ts  sync-queue.ts
mobile/src/services/: analytics.ts  (+3 more)
services/analytics-service/: pyproject.toml
services/analytics-service/analytics_app/: main.py
services/analytics-service/app/: __init__.py  main.py
services/analytics-service/tests/: test_analytics.py
services/asr-service/: pyproject.toml
services/asr-service/app/: __init__.py  config.py  main.py  providers.py
services/asr-service/asr_app/: config.py  main.py  providers.py  scoring.py
services/asr-service/tests/: test_api.py  test_provider_integration.py  test_scoring.py
services/auth-service/: package.json
services/classroom-service/: jest.config.cjs  package.json
services/content-service/: package.json
services/notification-service/: package.json
services/progress-service/: jest.config.cjs  package.json
tools/: migrate.ts  seed.ts
(+37 files in other folders)
