[project]
name = "analytics-service"
version = "2.0.0"
description = "LitPlay analytics service — consumes Kafka events, writes to ClickHouse"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "clickhouse-connect>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
