[project]
name = "asr-service"
version = "2.0.0"
description = "LitPlay ASR service — audio validation pipeline (Whisper GPU / Azure / scoring)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "rapidfuzz>=3.9.0",
    "metaphone>=0.6",
    "python-multipart>=0.0.9",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
